--- a/year1tour.html
+++ b/year1tour.html
@@ -13,44 +13,38 @@
   <link rel="stylesheet" href="odyssey/sandbox/css/slides.css">
   <script src="odyssey/vendor/modernizr-2.6.2.min.js"></script>
   
-  <link rel="stylesheet" href="leaflet/leaflet.css" />
-  <script src="leaflet/leaflet.js"></script>
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+	<link rel="stylesheet" href="leaflet/leaflet.css" />
+	<script src="leaflet/leaflet.js"></script>
+
+    <script src="leaflet/label/leaflet.label.js"></script>
+	<link rel="stylesheet" href="leaflet/label/leaflet.label.css" />
+    
+	<link rel="stylesheet" href="leaflet/marker/MarkerCluster.css" />
+    <script src="leaflet/marker/leaflet.markercluster.js"></script>
   
-  <link rel="stylesheet" href="leaflet/label/dist/leaflet.label.css" />
-  <script src="leaflet/label/dist/leaflet.label.js"></script>
-	
-  <link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.Default.css" />
-  <script src="leaflet/marker/dist/leaflet.markercluster-src.js"></script>
-  
-  <link rel="stylesheet" href="leaflet/minimap/src/Control.MiniMap.css" />
-  <script src="leaflet/minimap/src/Control.MiniMap.js"></script>
-  
-  <link rel="stylesheet" href="leaflet/mouseposition/src/L.Control.MousePosition.css" />
-  <script src="leaflet/mouseposition/src/L.Control.MousePosition.js"></script>
-	
+    <link rel="stylesheet" href="leaflet/mouseposition/src/L.Control.MousePosition.css" />
+    <script src="leaflet/mouseposition/src/L.Control.MousePosition.js"></script>
 	
 	<!--Links to php scripts which convert postgres data to geojson-->  
     <script src="http://voicesontheland.org/media/alex2.php"></script><!--Converts media table with videos to geojsonpoint-->
     <!--Options: geotable - table name, fields - fields to include, varname  - javascript variable name-->
     <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=ona_boundary_line&fields=left_fid&varname=boundaryline"></script>
     <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=ona_landuseplan_boundary&fields=id&varname=lup"></script>
-    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=ona_ir&fields=nglshnm&varname=geojsonreserves"></script>
-    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=place_name_areas_new_4326&fields=name&varname=placenames"></script>
-	<script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=coyote_landmark_areas&fields=label&varname=coyote"></script>
-    <script src="js/places.js"></script>
-    <script src="js/lakes.js"></script>
-    <script src="js/unity_runs.js"></script>
-    <script src="js/photo7.js"></script>
-    <script src="js/photopoints.js"></script>
-    <script src="js/cct.js"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=reserves&fields=nglshnm&varname=geojsonreserves"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=place_name_areas_new_4326&fields=nsyilxcen&varname=placenames"></script>
+	<script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=coyote_lm&fields=label&varname=coyote"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=places&fields=Name,Nsyilxcen,Additional&varname=places"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=lakes&fields=Name,Nsyilxcen,Additional&varname=lakes"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=unity_runs&fields=Name,url&varname=unity_runs"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=photopoints&fields=name,image&varname=photopoints"></script>
   
   
 </head>
 <body>
   <div id="map" style="width: 100%; height: 100%;"></div>
 
-  <div id="slides_container_run" style="display:block;">
+  <div id="slides_container" style="display:block;">
     <div id="dots"></div>
 
     <div id="slides"></div>
