--- a/coyotetour.html
+++ b/coyotetour.html
@@ -6,52 +6,39 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/x-icon" href="odyssey/sandbox/favicon.png">
   <link rel="icon" type="image/png" href="http://voicesontheland.org/projects/ce_atlas/group_images/Okanagan_Nation_Alliance949_3.jpg">
 
   <!--Odyssey and Leaflet Links-->
   <link rel="stylesheet" href="http://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/themes/css/cartodb.css">
   <link rel="stylesheet" href="odyssey/sandbox/css/slides.css">
   <script src="odyssey/vendor/modernizr-2.6.2.min.js"></script>
-  <link rel="stylesheet" href="leaflet/leaflet.css" />
-	<link rel="stylesheet" href="leaflet/label/dist/leaflet.label.css" />
+  
+  
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+	<link rel="stylesheet" href="leaflet/leaflet.css" />
 	<script src="leaflet/leaflet.js"></script>
-	<script src="leaflet/leaflet-src.js"></script>
 
-	<script src="leaflet/label/src/Label.js"></script>
-	<script src="leaflet/label/src/BaseMarkerMethods.js"></script>
-	<script src="leaflet/label/src/Marker.Label.js"></script>
-	<script src="leaflet/label/src/CircleMarker.Label.js"></script>
-	<script src="leaflet/label/src/Path.Label.js"></script>
-	<script src="leaflet/label/src/Map.Label.js"></script>
-	<script src="leaflet/label/src/FeatureGroup.Label.js"></script>
-	
-	<link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="leaflet/marker/dist/MarkerCluster.Default.css" />
-    <script src="leaflet/marker/dist/leaflet.markercluster-src.js"></script>
-  
-  
-    <link rel="stylesheet" href="leaflet/minimap/src/Control.MiniMap.css" />
-    <script src="leaflet/minimap/src/Control.MiniMap.js"></script>
+    <script src="leaflet/label/leaflet.label.js"></script>
+	<link rel="stylesheet" href="leaflet/label/leaflet.label.css" />
+    
+	<link rel="stylesheet" href="leaflet/marker/MarkerCluster.css" />
+    <script src="leaflet/marker/leaflet.markercluster.js"></script>
   
     <link rel="stylesheet" href="leaflet/mouseposition/src/L.Control.MousePosition.css" />
     <script src="leaflet/mouseposition/src/L.Control.MousePosition.js"></script>
-
 	
 	<!--Links to php scripts which convert postgres data to geojson-->  
     <script src="http://voicesontheland.org/media/alex2.php"></script><!--Converts media table with videos to geojsonpoint-->
     <!--Options: geotable - table name, fields - fields to include, varname  - javascript variable name-->
     <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=ona_boundary_line&fields=left_fid&varname=boundaryline"></script>
     <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=ona_landuseplan_boundary&fields=id&varname=lup"></script>
-    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=ona_ir&fields=nglshnm&varname=geojsonreserves"></script>
-    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=place_name_areas_new_4326&fields=name&varname=placenames"></script>
-	<script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=coyote_landmark_areas&fields=label&varname=coyote"></script>
-    <script src="js/places.js"></script>
-    <script src="js/lakes.js"></script>
-    <script src="js/unity_runs.js"></script>
-    <script src="js/photo7.js"></script>
-    <script src="js/photopoints.js"></script>
-    <script src="js/cct.js"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=reserves&fields=nglshnm&varname=geojsonreserves"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=place_name_areas_new_4326&fields=nsyilxcen&varname=placenames"></script>
+	<script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=coyote_lm&fields=label&varname=coyote"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=places&fields=Name,Nsyilxcen,Additional&varname=places"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=lakes&fields=Name,Nsyilxcen,Additional&varname=lakes"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=unity_runs&fields=Name,url&varname=unity_runs"></script>
+    <script src="http://voicesontheland.org/media/alex.php?srid=4326&geotable=photopoints&fields=name,image&varname=photopoints"></script>
   
   
 </head>
@@ -109,116 +96,116 @@
 - zoom: 7
 ```
 
-#Coyote Landmark Areas
+#Coyote at Stump Lake
 ```
 - center: [50.39, -120.39]
 - zoom: 11
 ```
 
 
-#Coyote Landmark Areas
+#Coyote's Canoe
 ```
-- center: [50.46, -119.46]
+- center: [50.47, -119.7]
 - zoom: 11
 ```
 
 
-#Coyote Landmark Areas
+#Pillar Rock
 ```
-- center: [50.61, -119.64]
+- center: [50.6, -119.69]
 - zoom: 11
 ```
 
 
-#Coyote Landmark Areas
+#Coyote Tribute Rock
 ```
-- center: [50.37, -119.28]
+- center: [50.35, -119.37]
 - zoom: 11
 ```
 
 
-#Coyote Landmark Areas
+#Coyote's House
 ```
-- center: [50.4, -118.7]
+- center: [50.43, -118.78]
 - zoom: 11
 ```
 
 
-#Coyote Landmark Areas
+#Coyote's Fishing Stand
 ```
-- center: [50.3, -118.8]
+- center: [50.3, -118.85]
 - zoom: 11
 ```
 
 
-#Coyote Landmark Areas
+#Coyote's Tower
 ```
-- center: [49.84, -119.36]
+- center: [49.84, -119.4]
 - zoom: 11
 ```
 
 
-#Coyote Landmark Areas
+#Coyote Tribute Rock
 ```
-- center: [49.42, -119.7]
+- center: [49.42, -119.72]
 - zoom: 12
 ```
 
 
-#Coyote Landmark Areas
+#Owl Rock
 ```
-- center: [49.4, -119.7]
+- center: [49.4, -119.72]
 - zoom: 12
 ```
 
 
-#Coyote Landmark Areas
+#Coyote's Teepee
 ```
-- center: [49.38, -119.61]
+- center: [49.38, -119.64]
 - zoom: 12
 ```
 
 
-#Coyote Landmark Areas
+#Coyote's Winter Lodge
 ```
-- center: [49.35, -119.58]
+- center: [49.35, -119.61]
 - zoom: 12
 ```
 
 
-#Coyote Landmark Areas
+#Coyote on Horseback with Dog
 ```
-- center: [49.26, -119.53]
-- zoom: 12
-```
-
-
-
-#Coyote Landmark Areas
-```
-- center: [49.23, -119.98]
-- zoom: 12
-```
-
-
-#Coyote Landmark Areas
-```
-- center: [49.233, -119.97]
-- zoom: 12
-```
-
-
-#Coyote Landmark Areas
-```
-- center: [49.24, -120.01]
+- center: [49.26, -119.55]
 - zoom: 12
 ```
 
 
 
-#Coyote Landmark Areas
+#Coyote's Fishing Station
 ```
-- center: [49.28, -120.03]
+- center: [49.23, -120.04]
+- zoom: 12
+```
+
+
+#Coyote's Intestines
+```
+- center: [49.23, -120.03]
+- zoom: 12
+```
+
+
+#Coyote Tribute Rock
+```
+- center: [49.25, -120.05]
+- zoom: 12
+```
+
+
+
+#Coyote Tribute Rock
+```
+- center: [49.28, -120.08]
 - zoom: 12
 ```
 
