--- a/year2tour.html
+++ b/year2tour.html
@@ -60,7 +60,7 @@
 
     <ul id="navButtons">
     <div id="run-button" style="position:relative;"><div style="position:absolute;bottom:4px;right:0;"><a href="unity_runs.html"><center>Run Overview</center></a></div></div>
-      <div id="home-button"><a href="frontpage.html"><center><img src="images/home_icon.svg" ></center></a></div>
+      <div id="home-button"><a href="index.html"><center><img src="images/home_icon.svg" ></center></a></div>
       <div id= "back"><li><a class="prev" style="margin-right:50px;"><center><img style="margin-left:7px"src="odyssey/sandbox/img/back.png" height="26px" ></center></a></li></div>
       <div id= "forward"><li><a class="next" ><center><img style="margin-left:22px" src="odyssey/sandbox/img/forward.png" height="26px" ></center></a></li></div>
       
